--- a/package.json
+++ b/package.json
@@ -11,13 +11,44 @@
   "dependencies": {
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "@headlessui/react": "^1.5.0",
+    "@heroicons/react": "^1.0.5",
+    "@apollo/client": "^3.5.8",
+    "@graphql-codegen/cli": "^2.5.0",
+    "@tailwindcss/forms": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.1",
+    "@types/redux-persist": "^4.3.1",
+    "apollo-link": "^1.2.14",
+    "apollo-upload-client": "^17.0.0",
+    "classnames": "^2.3.1",
+    "graphql": "^16.3.0",
+    "jsbarcode": "^3.11.5",
+    "moment": "^2.29.1",
+    "react-qr-barcode-scanner": "^1.0.6",
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.1",
+    "sharp": "^0.30.0",
+    "stl-viewer": "^0.12.0",
+    "styled-components": "^5.3.3",
+    "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.23",
+    "@graphql-codegen/cli": "2.5.0",
+    "@graphql-codegen/typescript": "2.4.3",
+    "@graphql-codegen/typescript-operations": "2.2.4",
+    "@graphql-codegen/typescript-react-apollo": "3.2.5",
+    "@types/apollo-upload-client": "^17.0.0"
   }
 }
