--- a/codegen.yml
+++ b/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: 'https://form-api.meritt-website.dev'
+schema: 'https://admin-api.meritt-website.dev/'
 documents: 'src/graphql/**/*.graphql'
 generates:
   src/generated/graphql.tsx:
