--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "apollo-link": "^1.2.14",
     "apollo-upload-client": "^17.0.0",
     "classnames": "^2.3.1",
+    "react-chartjs-2": "^4.0.0",
+    "chart.js": "^3.6.1",
     "graphql": "^16.3.0",
     "jsbarcode": "^3.11.5",
     "moment": "^2.29.1",
