--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
     "gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "next": "12.1.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@apollo/client": "^3.5.8",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.5",
-    "@apollo/client": "^3.5.8",
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.1",
     "@types/redux-persist": "^4.3.1",
     "apollo-link": "^1.2.14",
     "apollo-upload-client": "^17.0.0",
-    "classnames": "^2.3.1",
-    "react-chartjs-2": "^4.0.0",
     "chart.js": "^3.6.1",
+    "classnames": "^2.3.1",
     "graphql": "^16.3.0",
     "jsbarcode": "^3.11.5",
     "moment": "^2.29.1",
+    "next": "12.1.0",
+    "print-js": "^1.6.0",
+    "react": "17.0.2",
+    "react-chartjs-2": "^4.0.0",
+    "react-dom": "17.0.2",
     "react-qr-barcode-scanner": "^1.0.6",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
@@ -39,18 +40,18 @@
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.39",
-    "eslint": "8.10.0",
-    "eslint-config-next": "12.1.0",
-    "typescript": "4.5.5",
-    "autoprefixer": "^10.4.2",
-    "postcss": "^8.4.6",
-    "tailwindcss": "^3.0.23",
     "@graphql-codegen/cli": "2.6.2",
     "@graphql-codegen/typescript": "2.4.5",
     "@graphql-codegen/typescript-operations": "2.3.2",
     "@graphql-codegen/typescript-react-apollo": "3.2.8",
-    "@types/apollo-upload-client": "^17.0.0"
+    "@types/apollo-upload-client": "^17.0.0",
+    "@types/node": "17.0.21",
+    "@types/react": "17.0.39",
+    "autoprefixer": "^10.4.2",
+    "eslint": "8.10.0",
+    "eslint-config-next": "12.1.0",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.0.23",
+    "typescript": "4.5.5"
   }
 }
