--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "gen": "graphql-codegen --config codegen.yml",
-    "types": "tsc --noemit"
+    "types": "tsc --noemit",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@apollo/client": "^3.5.8",
@@ -52,6 +53,7 @@
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
-    "typescript": "4.5.5"
+    "typescript": "4.5.5",
+    "husky": "^7.0.0"
   }
 }
