--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "classnames": "^2.3.1",
     "graphql": "^16.3.0",
     "jsbarcode": "^3.11.5",
+    "meritt-stl-viewer": "^0.12.2",
     "moment": "^2.29.2",
     "next": "12.1.0",
     "react": "17.0.2",
@@ -51,9 +52,9 @@
     "autoprefixer": "^10.4.2",
     "eslint": "8.10.0",
     "eslint-config-next": "12.1.0",
+    "husky": "^7.0.0",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.23",
-    "typescript": "4.5.5",
-    "husky": "^7.0.0"
+    "typescript": "4.5.5"
   }
 }
