--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "17.0.2",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "17.0.2",
+    "react-jsbarcode": "^0.2.4",
     "react-qr-barcode-scanner": "^1.0.6",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
