added download pdf]

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "chart.js": "^3.6.1",
     "classnames": "^2.3.1",
     "graphql": "^16.3.0",
+    "html2canvas": "^1.4.1",
     "jsbarcode": "^3.11.5",
+    "jspdf": "^2.5.1",
     "meritt-stl-viewer": "^0.12.2",
     "moment": "^2.29.2",
     "next": "12.1.0",
