--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 NEXT_PUBLIC_API_ENDPOINT=https://admin-api.remotedigital.org
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyDhHEgvVTATrdjH--uFMJeT2U11RylEknw
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=formatty-27b05.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=formatty-27b05
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=formatty-27b05.appspot.com
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=660940534307
+NEXT_PUBLIC_FIREBASE_APP_ID=1:660940534307:web:31499f698660ebc8517796
