--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "apollo-upload-client": "^17.0.0",
     "chart.js": "^3.6.1",
     "classnames": "^2.3.1",
+    "firebase": "^9.8.3",
     "graphql": "^16.3.0",
     "html2canvas": "^1.4.1",
     "jsbarcode": "^3.11.5",
