--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "apollo-upload-client": "^17.0.0",
     "chart.js": "^3.6.1",
     "classnames": "^2.3.1",
+    "file-saver": "^2.0.5",
     "firebase": "^9.8.3",
     "graphql": "^16.3.0",
     "html2canvas": "^1.4.1",
     "jsbarcode": "^3.11.5",
     "jspdf": "^2.5.1",
+    "jszip": "^3.10.0",
+    "jszip-utils": "^0.1.0",
     "meritt-stl-viewer": "^0.12.2",
     "moment": "^2.29.2",
     "next": "12.1.0",
@@ -51,6 +54,7 @@
     "@graphql-codegen/typescript-operations": "2.3.2",
     "@graphql-codegen/typescript-react-apollo": "3.2.8",
     "@types/apollo-upload-client": "^17.0.0",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "17.0.21",
     "@types/react": "17.0.39",
     "autoprefixer": "^10.4.2",
