--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-NEXT_PUBLIC_API_ENDPOINT=https://admin-api.meritt-website.dev
+# NEXT_PUBLIC_API_ENDPOINT=https://admin-api.meritt-website.dev
+NEXT_PUBLIC_API_ENDPOINT=https://admin-api.remotedigital.org
 NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyDhHEgvVTATrdjH--uFMJeT2U11RylEknw
 NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=formatty-27b05.firebaseapp.com
 NEXT_PUBLIC_FIREBASE_PROJECT_ID=formatty-27b05
